# core

./: .gitignore  Cargo.toml  README.md  config.example.toml
src/: config.rs  data_manager.rs  data_plugins.rs  gui_connector.rs  image.rs  input_plugins.rs  main.rs  plugin.rs  wrapped_stream.rs
